--- a/beauty_city/core/templates/index.html
+++ b/beauty_city/core/templates/index.html
@@ -108,7 +108,7 @@
 									довольных клиентов
 								</p>
 							</div>
-							<a href="service.html"><button class="banner__btn">Записаться</button></a>
+							<a href="{% url 'service' %}"><button class="banner__btn">Записаться</button></a>
 						</div>
 					</div>
 					<div class="col-md-12 col-lg-5">
@@ -286,7 +286,9 @@
 									<div class="masters__footer_light">СТАЖ РАБОТЫ:</div>
 									<div class="masters__footer_num">3 г. 10 мес.</div>
 								</div>
-								<button class="masters__footer_btn">Записаться</button>
+								<!-- <button class="masters__footer_btn">Записаться</button> -->
+								<a href="{% url 'service' %}" class="masters__footer_btn">Записаться</a>
+
 							</div>
 						</div>
 					</div>
@@ -309,7 +311,8 @@
 									<div class="masters__footer_light">СТАЖ РАБОТЫ:</div>
 									<div class="masters__footer_num">4 г. 9 мес.</div>
 								</div>
-								<button class="masters__footer_btn">Записаться</button>
+								<!-- <button class="masters__footer_btn">Записаться</button> -->
+								<a href="{% url 'service' %}" class="masters__footer_btn">Записаться</a>
 							</div>
 						</div>
 					</div>
@@ -332,7 +335,8 @@
 									<div class="masters__footer_light">СТАЖ РАБОТЫ:</div>
 									<div class="masters__footer_num">1 г. 2 мес.</div>
 								</div>
-								<button class="masters__footer_btn">Записаться</button>
+								<!-- <button class="masters__footer_btn">Записаться</button> -->
+								<a href="{% url 'service' %}" class="masters__footer_btn">Записаться</a>
 							</div>
 						</div>
 					</div>
@@ -355,7 +359,8 @@
 									<div class="masters__footer_light">СТАЖ РАБОТЫ:</div>
 									<div class="masters__footer_num">1 г. 1 мес.</div>
 								</div>
-								<button class="masters__footer_btn">Записаться</button>
+								<!-- <button class="masters__footer_btn">Записаться</button> -->
+								<a href="{% url 'service' %}" class="masters__footer_btn">Записаться</a>
 							</div>
 						</div>
 					</div>
@@ -378,7 +383,8 @@
 									<div class="masters__footer_light">СТАЖ РАБОТЫ:</div>
 									<div class="masters__footer_num">3 г. 1 мес.</div>
 								</div>
-								<button class="masters__footer_btn">Записаться</button>
+								<!-- <button class="masters__footer_btn">Записаться</button> -->
+								<a href="{% url 'service' %}" class="masters__footer_btn">Записаться</a>
 							</div>
 						</div>
 					</div>
@@ -401,7 +407,8 @@
 									<div class="masters__footer_light">СТАЖ РАБОТЫ:</div>
 									<div class="masters__footer_num">1 г. 1 мес.</div>
 								</div>
-								<button class="masters__footer_btn">Записаться</button>
+								<!-- <button class="masters__footer_btn">Записаться</button> -->
+								<a href="{% url 'service' %}" class="masters__footer_btn">Записаться</a>
 							</div>
 						</div>
 					</div>
@@ -567,7 +574,10 @@
 							<div class="contacts__info">
 								<div class="contacts__infoBlock">
 									<div class="contacts__info_title">контакты</div>
-									<a href="tel:+79179023800" class="contacts__info_tel">+7 (917) 902 38 00</a>
+									<!-- <a href="tel:+79179023800" class="contacts__info_tel">+7 (917) 902 38 00</a> -->
+									{% if settings and settings.phone %}
+  										<a href="tel:{{ settings.phone }}" class="contacts__info_tel">{{ settings.phone_pretty|default:settings.phone }}</a>
+									{% endif %}
 								</div>
 								<a href="#" class="contacts__info_mail">hello@beauty.ru</a>
 							</div>
@@ -609,7 +619,10 @@
 									
 							</div>
 							<div class="col-md-3">
-								<a href="tel:+79179023800" class="contacts__info_tel">+7 (917) 902 38 00</a>
+								<!-- <a href="tel:+79179023800" class="contacts__info_tel">+7 (917) 902 38 00</a> -->
+								{% if settings and settings.phone %}
+  									<a href="tel:{{ settings.phone }}" class="contacts__info_tel">{{ settings.phone_pretty|default:settings.phone }}</a>
+								{% endif %}
 							</div>
 						</div>
 						<div class="row">
