--- a/beauty_city/core/templates/notes.html
+++ b/beauty_city/core/templates/notes.html
@@ -422,7 +422,10 @@
 									
 							</div>
 							<div class="col-md-3">
-								<a href="tel:+79179023800" class="contacts__info_tel">+7 (917) 902 38 00</a>
+								<!-- <a href="tel:+79179023800" class="contacts__info_tel">+7 (917) 902 38 00</a> -->
+								{% if settings and settings.phone %}
+  									<a href="tel:{{ settings.phone }}" class="contacts__info_tel">{{ settings.phone_pretty|default:settings.phone }}</a>
+								{% endif %}
 							</div>
 						</div>
 						<div class="row">
