--- a/beauty_city/core/templates/index.html
+++ b/beauty_city/core/templates/index.html
@@ -49,7 +49,9 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12">
-							<button class="mobMenu__btn">Перезвоните мне</button>
+							<!-- <button class="mobMenu__btn">Перезвоните мне</button> -->
+							<a href="#contacts" class="mobMenu__btn">Перезвоните мне</a>
+							<!-- DEBUG: {{ settings.manager_phone }} -->
 						</div>
 					</div>
 				</div>
@@ -80,7 +82,9 @@
 					</div>
 					<div class="col-2 col-md-2 col-lg-3">
 						<div class="header__block">
-						<a href="tel:+79179023800"><button class="header__block_btn">Перезвоните мне</button></a>
+						<!-- <a href="tel:+79179023800"><button class="header__block_btn">Перезвоните мне</button></a> -->
+						<a href="#contacts" class="header__block_btn">Перезвоните мне</a>
+
 						<div class="header__block_auth">
 							<img src="{% static 'img/acc.svg' %}" alt="account" class="header__account_img">
 							<span class="header__block_auth__intro">Войти</span>
@@ -575,8 +579,8 @@
 								<div class="contacts__infoBlock">
 									<div class="contacts__info_title">контакты</div>
 									<!-- <a href="tel:+79179023800" class="contacts__info_tel">+7 (917) 902 38 00</a> -->
-									{% if settings and settings.phone %}
-  										<a href="tel:{{ settings.phone }}" class="contacts__info_tel">{{ settings.phone_pretty|default:settings.phone }}</a>
+									{% if settings and settings.manager_phone %}
+  										<a href="tel:{{ settings.manager_phone }}" class="contacts__info_tel">{{ settings.manager_phone_pretty|default:settings.manager_phone }}</a>
 									{% endif %}
 								</div>
 								<a href="#" class="contacts__info_mail">hello@beauty.ru</a>
@@ -619,9 +623,16 @@
 									
 							</div>
 							<div class="col-md-3">
+								<!-- !!!!! -->
+								<!-- <a href="#contacts" class="mobMenu__btn">Перезвоните мне</a> -->
+
 								<!-- <a href="tel:+79179023800" class="contacts__info_tel">+7 (917) 902 38 00</a> -->
-								{% if settings and settings.phone %}
-  									<a href="tel:{{ settings.phone }}" class="contacts__info_tel">{{ settings.phone_pretty|default:settings.phone }}</a>
+								<!-- DEBUG: {{ settings.manager_phone }} -->
+
+								{% if settings and settings.manager_phone %}
+  									<a href="tel:{{ settings.manager_phone }}" class="contacts__info_tel">
+										{{ settings.manager_phone_pretty|default:settings.manager_phone }}
+									</a>
 								{% endif %}
 							</div>
 						</div>
